Closed Bug 2009204 Opened 7 months ago Closed 5 months ago

Assertion failure: !aIsPreload, at /builds/worker/checkouts/gecko/uriloader/preload/PreloaderBase.cpp:135

Categories

(Core :: Networking, defect, P2)

defect
Points:
3

Tracking

()

RESOLVED FIXED
149 Branch
Tracking Status
firefox-esr115 --- wontfix
firefox-esr140 --- wontfix
firefox148 --- wontfix
firefox149 --- fixed

People

(Reporter: tsmith, Assigned: valentin)

References

(Blocks 1 open bug, )

Details

(Keywords: assertion, pernosco, Whiteboard: [necko-triaged] [necko-priority-next])

Attachments

(1 file)

Found with m-c 20260107-b9e21434cf45 (--enable-debug)

This was found by visiting a live website with a debug build.

STR:

  • Launch browser and visit site

This issue was triggered by visiting https://www.fila.com.br/tenis-fila-float-maxxi-2-pro-masculino-1294563/p. A Pernosco session is available here: https://pernos.co/debug/6NWSlxWp29Q6KSpTk5lT1g/index.html

Assertion failure: !aIsPreload, at /builds/worker/checkouts/gecko/uriloader/preload/PreloaderBase.cpp:135

0|0|libxul.so|mozilla::PreloaderBase::NotifyOpen(mozilla::PreloadHashKey const&, mozilla::dom::Document*, bool, bool)|git:github.com/mozilla-firefox/firefox:uriloader/preload/PreloaderBase.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|135|0x185
0|1|libxul.so|mozilla::PreloaderBase::NotifyOpen(mozilla::PreloadHashKey const&, nsIChannel*, mozilla::dom::Document*, bool, bool)|git:github.com/mozilla-firefox/firefox:uriloader/preload/PreloaderBase.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|156|0x2d
0|2|libxul.so|mozilla::dom::ScriptLoader::StartLoadInternal(JS::loader::ScriptLoadRequest*, unsigned int, mozilla::Maybe<nsTAutoStringN<char16_t, (unsigned long)64> > const&)|git:github.com/mozilla-firefox/firefox:dom/script/ScriptLoader.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|1017|0x536
0|3|libxul.so|mozilla::dom::ModuleLoader::StartFetch(JS::loader::ModuleLoadRequest*)|git:github.com/mozilla-firefox/firefox:dom/script/ModuleLoader.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|127|0xff
0|4|libxul.so|JS::loader::ModuleLoaderBase::StartOrRestartModuleLoad(JS::loader::ModuleLoadRequest*, JS::loader::ModuleLoaderBase::RestartRequest)|git:github.com/mozilla-firefox/firefox:js/loader/ModuleLoaderBase.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|582|0x315
0|5|libxul.so|JS::loader::ModuleLoaderBase::HostLoadImportedModule(JSContext*, JS::Handle<JSScript*>, JS::Handle<JSObject*>, JS::Handle<JS::Value>, JS::Handle<JS::Value>, unsigned int, JS::ColumnNumberOneOrigin)|git:github.com/mozilla-firefox/firefox:js/loader/ModuleLoaderBase.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|272|0x909
0|6|libxul.so|js::HostLoadImportedModule(JSContext*, JS::Handle<JSScript*>, JS::Handle<JSObject*>, JS::Handle<JS::Value>, JS::Handle<JS::Value>, unsigned int, JS::ColumnNumberOneOrigin)|git:github.com/mozilla-firefox/firefox:js/src/vm/Modules.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|767|0x6e
0|7|libxul.so|InnerModuleLoading(JSContext*, JS::Handle<js::GraphLoadingStateRecordObject*>, JS::Handle<js::ModuleObject*>)|git:github.com/mozilla-firefox/firefox:js/src/vm/Modules.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|1506|0x741
0|8|libxul.so|JS::FinishLoadingImportedModule(JSContext*, JS::Handle<JSScript*>, JS::Handle<JSObject*>, JS::Handle<JS::Value>, JS::Handle<JSObject*>, bool)|git:github.com/mozilla-firefox/firefox:js/src/vm/Modules.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|143|0x569
0|9|libxul.so|JS::loader::ModuleLoaderBase::FinishLoadingImportedModule(JSContext*, JS::loader::ModuleLoadRequest*)|git:github.com/mozilla-firefox/firefox:js/loader/ModuleLoaderBase.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|323|0x22c
0|10|libxul.so|JS::loader::ModuleLoaderBase::OnFetchSucceeded(JS::loader::ModuleLoadRequest*)|git:github.com/mozilla-firefox/firefox:js/loader/ModuleLoaderBase.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|814|0x9b
0|11|libxul.so|JS::loader::ModuleLoaderBase::ResumeWaitingRequests(JS::loader::ModuleLoaderBase::LoadingRequest*, bool)|git:github.com/mozilla-firefox/firefox:js/loader/ModuleLoaderBase.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|692|0x87
0|12|libxul.so|JS::loader::ModuleLoaderBase::OnFetchComplete(JS::loader::ModuleLoadRequest*, nsresult)|git:github.com/mozilla-firefox/firefox:js/loader/ModuleLoaderBase.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|794|0x151
0|13|libxul.so|mozilla::dom::(anonymous namespace)::OffThreadCompilationCompleteTask::Run()|git:github.com/mozilla-firefox/firefox:dom/script/ScriptLoader.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|1990|0x229
0|14|libxul.so|mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&)|git:github.com/mozilla-firefox/firefox:xpcom/threads/TaskController.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|1325|0x5b4
0|15|libxul.so|mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&)|git:github.com/mozilla-firefox/firefox:xpcom/threads/TaskController.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|1148|0x57
0|16|libxul.so|mozilla::TaskController::ProcessPendingMTTask(bool)|git:github.com/mozilla-firefox/firefox:xpcom/threads/TaskController.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|641|0x65
0|17|libxul.so|mozilla::detail::RunnableFunction<mozilla::TaskController::TaskController()::$_0>::Run()|git:github.com/mozilla-firefox/firefox:xpcom/threads/nsThreadUtils.h:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|549|0x16
0|18|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|git:github.com/mozilla-firefox/firefox:xpcom/threads/nsThread.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|1164|0x5ba
0|19|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|git:github.com/mozilla-firefox/firefox:xpcom/threads/nsThreadUtils.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|461|0x4f
0|20|libxul.so|mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*)|git:github.com/mozilla-firefox/firefox:ipc/glue/MessagePump.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|85|0xc0
0|21|libxul.so|MessageLoop::Run()|git:github.com/mozilla-firefox/firefox:ipc/chromium/src/base/message_loop.cc:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|343|0x61
0|22|libxul.so|nsBaseAppShell::Run()|git:github.com/mozilla-firefox/firefox:widget/nsBaseAppShell.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|152|0x28
0|23|libxul.so|nsAppShell::Run()|git:github.com/mozilla-firefox/firefox:widget/gtk/nsAppShell.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|555|0x114
0|24|libxul.so|XRE_RunAppShell()|git:github.com/mozilla-firefox/firefox:toolkit/xre/nsEmbedFunctions.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|656|0x6b
0|25|libxul.so|mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*)|git:github.com/mozilla-firefox/firefox:ipc/glue/MessagePump.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|235|0x3c
0|26|libxul.so|MessageLoop::Run()|git:github.com/mozilla-firefox/firefox:ipc/chromium/src/base/message_loop.cc:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|343|0x61
0|27|libxul.so|XRE_InitChildProcess(int, char**, XREChildData const*)|git:github.com/mozilla-firefox/firefox:toolkit/xre/nsEmbedFunctions.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|594|0xa21
0|28|firefox-bin|main|git:github.com/mozilla-firefox/firefox:browser/app/nsBrowserApp.cpp:8faede9a1ffe0eacdd56ab5761ad488d54f5a244|465|0x21c
Severity: -- → S3
Points: --- → 3
Rank: 3
Priority: -- → P2
Whiteboard: [necko-triaged] [necko-priority-next]
Assignee: nobody → valentin.gosu
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 5 months ago
Resolution: --- → FIXED
Target Milestone: --- → 149 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: