Bug 2009204 - Deregister scriptLoader preload when it fails r=dom-core,edgar

Differential Revision: https://phabricator.services.mozilla.com/D284222